--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -17,7 +17,7 @@ right_links:
     social_icon: Instagram
     new_window: true
   - name: Merch
-    link: 
+    link: /merch/
     social_icon: 
     new_window: true
   - name: Newsletter
